--- a/.gitea/config.yml
+++ b/.gitea/config.yml
@@ -1,6 +1,9 @@
 name: zarply
 run-name: ${{ gitea.actor }} has pushed
-on: [push]
+on:
+  push:
+    branches:  
+      - '**'   ### this is done to prevent config runs when tagging
 
 jobs:
   build-and-test:
@@ -8,6 +11,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: print test
+        run: echo "This is a test message"
+
 
       # - name: Build project
       #   run: npm run build
