--- a/.gitea/workflows/config.yml
+++ b/.gitea/workflows/config.yml
@@ -1,9 +1,13 @@
 name: zarply
+
 run-name: ${{ gitea.actor }} has pushed
 on:
   push:
     branches:  
       - '**'   ### this is done to prevent config runs when tagging
+dependencies:
+  checkov:
+    version: "2.11.0"
 
 jobs:
   build-and-test:
