--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=zarply_zarply-mobile-wallet
 sonar.organization=zarply
+sonar.sources=/lib
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Zarply Mobile Wallet
