--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   go_router: ^14.6.1
+  flutter_secure_storage: ^9.2.2
+  solana: ^0.31.0
 
 dev_dependencies:
   flutter_test:
