--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   solana: ^0.31.0
   intl: ^0.20.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,7 @@ flutter:
     - images/saflag.png
     - images/zarp.jpeg
     - images/solana.png
-
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
