--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 solana_wallet_rpc_url=devnet or mainnet or testnet
 solana_wallet_websocket_url=wss://api.example.com
 solana_wallet_public_key=your_public_key_here
+ZARP_MINT_ADDRESS=enter_zarp_mint_address_here
