--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   provider: ^6.1.2
   qr: ^3.0.1
   share_plus: ^10.1.3
-  solana: ^0.31.1+1
+  solana: ^0.31.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
