--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   go_router: ^14.6.1
+  image_picker: ^1.0.7
   intl: ^0.20.1
+  mobile_scanner: ^6.0.6
   provider: ^6.1.2
   qr: ^3.0.1
   share_plus: ^10.1.3
@@ -36,7 +38,7 @@ flutter:
   assets:
     # assets/images/
     - images/saflag.png
-    - images/zarp.jpeg
+    - images/zarp.png
     - images/solana.png
     - images/logo.png
     - images/splash.png
