--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ flutter:
     - images/logo.png
     - images/splash.png
     - images/qr-code-logo.png
+    - images/payed.png
+    - images/received.png
     - .env
 
   # TODO: ask a designer to provide fonts for our project and specify them here
