--- a/.gitea/workflows/config.yml
+++ b/.gitea/workflows/config.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Install Gitleaks
         run: |
-          curl -sSL https://github.com/zricethezav/gitleaks/releases/download/v8.12.0/gitleaks-linux-amd64.tar.gz | tar -xvzf - -C /usr/local/bin
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/download/v8.24.0/gitleaks_8.24.0_linux_x64.tar.gz | tar -xvzf - -C /usr/local/bin
           chmod +x /usr/local/bin/gitleaks
 
       - name: Run Gitleaks scan
