--- a/.gitea/workflows/config.yml
+++ b/.gitea/workflows/config.yml
@@ -47,8 +47,10 @@ jobs:
 
       - name: Install Gitleaks
         run: |
-          curl -sSL https://github.com/gitleaks/gitleaks/releases/download/v8.24.0/gitleaks_8.24.0_linux_x64.tar.gz | tar -xvzf - -C /usr/local/bin
-          chmod +x /usr/local/bin/gitleaks
+          wget https://github.com/gitleaks/gitleaks/releases/download/v8.24.0/gitleaks_8.24.0_linux_x64.tar.gz
+          tar -xzf gitleaks_8.16.3_linux_x64.tar.gz
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/
 
       - name: Run Gitleaks scan
         run: |
