--- a/.gitea/workflows/config.yml
+++ b/.gitea/workflows/config.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Run Gitleaks scan
         run: |
-          gitleaks detect --source . --platform=gitea --report-path gitleaks-report.json --exit-code 1
+          gitleaks detect --source . --report-path gitleaks-report.json --exit-code 1
 
       - name: Upload Gitleaks Report
         if: failure()
