--- a/.gitea/workflows/merge_build.yml
+++ b/.gitea/workflows/merge_build.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Create zip file with correct timestamps
         run: |
           cd build/app/outputs/flutter-apk
-          zip -r artifact.zip app-release.apk
+          zip -r artifact.zip app-debug.apk
 
       - name: Store Test Results
         uses: actions/upload-artifact@v3
