--- a/.gitea/workflows/merge_build.yml
+++ b/.gitea/workflows/merge_build.yml
@@ -60,3 +60,51 @@ jobs:
         with:
           name: qa-zarply
           path: build/app/outputs/flutter-apk/artifact.zip
+
+
+jobs:
+  ios_build:
+    name: ios Build
+    runs-on: workstation.mac
+    env:
+      RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
+      RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
+      RELEASE_KEYSTORE: ${{ secrets.RELEASE_KEYSTORE }}
+      RELEASE_STORE_PASSWORD: ${{ secrets.RELEASE_STORE_PASSWORD }}
+      BASE64_KEYSTORE: ${{ secrets.BASE64_KEYSTORE }}
+      GITEA_USERNAME: ${{ secrets.USERNAME }}
+      GITEA_PASSWORD: ${{ secrets.PASSWORD }}
+      GITEA_SERVER: ${{ secrets.SERVER }}
+      MAP_API_KEY: ${{ secrets.MAP_API_KEY }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      
+      # - name: Decode Android Key Store
+      #   run: |
+      #     echo $BASE64_KEYSTORE | base64 -d | tee android/app/keystore > /dev/null
+      
+      # - name: Create key.properties
+      #   run: |
+      #     printf 'keyAlias=%s\nkeyPassword=%s\nstoreFile=%s\nstorePassword=%s' \
+      #       $RELEASE_KEY_ALIAS $RELEASE_KEY_PASSWORD $RELEASE_KEYSTORE $RELEASE_STORE_PASSWORD > android/key.properties
+      
+      - name: Verify Flutter Installation
+        run: flutter doctor -v
+
+      - name: Get Project Dependencies
+        run: flutter pub get
+
+      - name: Build ios
+        run: flutter build ios --dart-define-from-file=.env --debug
+
+      - name: Create zip file with correct timestamps
+        run: |
+          cd build/app/outputs/flutter-apk
+          zip -r artifact.zip app-debug.apk
+
+      - name: Store Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: qa-zarply
+          path: build/app/outputs/flutter-apk/artifact.zip
