--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_keyboard_visibility: ^6.0.0
   flutter_secure_storage: ^9.2.2
   flutter_web_plugins:
     sdk: flutter
