--- a/.gitea/workflows/merge_build.yml
+++ b/.gitea/workflows/merge_build.yml
@@ -86,11 +86,10 @@ jobs:
         with:
           python-version: '3.10.12' # Replace with the desired Python version
   
-      - name: Install pip
-        run: python -m ensurepip --upgrade      
-          
-      - name: Install the CodeMagic CLI
-        run:  pip install codemagic-cli-tools
+      - name: Install Python using Homebrew
+        run: |
+          brew install python
+          python3 -m ensurepip --upgrade
 
       - name: Initialize keychain
         run: keychain initialize
