--- a/.gitea/workflows/merge_build.yml
+++ b/.gitea/workflows/merge_build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Verify Flutter Installation
         run: flutter doctor -v
       - name: Get Project Dependencies
-        run: flutter pub get --no-precompile --enforce-lockfile
+        run: flutter pub get --no-precompile
       - name: Get iOS Dependencies
         run: |
           cd ios
