--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   qr: ^3.0.1
   share_plus: ^10.1.3
   solana: ^0.31.2
+  http: ^1.1.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
