chore: ignore .cxx build files on mac and linux

--- a/.gitignore
+++ b/.gitignore
@@ -45,128 +45,4 @@ app.*.map.json
 /android/app/release
 ios/fastlane/report.xml
 ios/fastlane/README.md
-android/app/.cxx/Debug/33586y42/hash_key.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/additional_project_files.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/android_gradle_build_mini.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/android_gradle_build.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/build_file_index.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/build.ninja
-android/app/.cxx/Debug/33586y42/arm64-v8a/cmake_install.cmake
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeCache.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/configure_fingerprint.bin
-android/app/.cxx/Debug/33586y42/arm64-v8a/metadata_generation_command.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/prefab_config.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/symbol_folder_index.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/query/client-agp/cache-v2
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/query/client-agp/cmakeFiles-v1
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/query/client-agp/codemodel-v2
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/reply/cache-v2-987a56a8eac5babbb272.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/reply/cmakeFiles-v1-93b79950ca2178e22998.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/reply/codemodel-v2-416faa7b5369204bb4db.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/.cmake/api/v1/reply/index-2025-04-13T19-48-44-0478.json
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/cmake.check_cache
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/rules.ninja
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/TargetDirectories.txt
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CMakeCCompiler.cmake
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CMakeCXXCompiler.cmake
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_C.bin
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_CXX.bin
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CMakeSystem.cmake
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.c
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.o
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.cpp
-android/app/.cxx/Debug/33586y42/arm64-v8a/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.o
-android/app/.cxx/Debug/33586y42/armeabi-v7a/additional_project_files.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/android_gradle_build_mini.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/android_gradle_build.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/build_file_index.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/build.ninja
-android/app/.cxx/Debug/33586y42/armeabi-v7a/cmake_install.cmake
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeCache.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/configure_fingerprint.bin
-android/app/.cxx/Debug/33586y42/armeabi-v7a/metadata_generation_command.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/prefab_config.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/symbol_folder_index.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/query/client-agp/cache-v2
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/query/client-agp/cmakeFiles-v1
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/query/client-agp/codemodel-v2
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/reply/cache-v2-67417787b5e4e52d641d.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/reply/cmakeFiles-v1-26831188f29f91dba514.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/reply/codemodel-v2-1a7b7266638d0cd12a4a.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/.cmake/api/v1/reply/index-2025-04-13T19-48-57-0485.json
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/cmake.check_cache
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/rules.ninja
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/TargetDirectories.txt
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CMakeCCompiler.cmake
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CMakeCXXCompiler.cmake
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_C.bin
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_CXX.bin
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CMakeSystem.cmake
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.c
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.o
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.cpp
-android/app/.cxx/Debug/33586y42/armeabi-v7a/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.o
-android/app/.cxx/Debug/33586y42/x86/additional_project_files.txt
-android/app/.cxx/Debug/33586y42/x86/android_gradle_build_mini.json
-android/app/.cxx/Debug/33586y42/x86/android_gradle_build.json
-android/app/.cxx/Debug/33586y42/x86/build_file_index.txt
-android/app/.cxx/Debug/33586y42/x86/build.ninja
-android/app/.cxx/Debug/33586y42/x86/cmake_install.cmake
-android/app/.cxx/Debug/33586y42/x86/CMakeCache.txt
-android/app/.cxx/Debug/33586y42/x86/configure_fingerprint.bin
-android/app/.cxx/Debug/33586y42/x86/metadata_generation_command.txt
-android/app/.cxx/Debug/33586y42/x86/prefab_config.json
-android/app/.cxx/Debug/33586y42/x86/symbol_folder_index.txt
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/query/client-agp/cache-v2
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/query/client-agp/cmakeFiles-v1
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/query/client-agp/codemodel-v2
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/reply/cache-v2-b60af6d83e4a02a5bb89.json
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/reply/cmakeFiles-v1-e7d1537fc5589611b357.json
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/reply/codemodel-v2-843b45e89462b8ca4095.json
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
-android/app/.cxx/Debug/33586y42/x86/.cmake/api/v1/reply/index-2025-04-13T19-48-58-0095.json
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/cmake.check_cache
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/rules.ninja
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/TargetDirectories.txt
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CMakeCCompiler.cmake
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CMakeCXXCompiler.cmake
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_C.bin
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_CXX.bin
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CMakeSystem.cmake
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.c
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.o
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.cpp
-android/app/.cxx/Debug/33586y42/x86/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.o
-android/app/.cxx/Debug/33586y42/x86_64/additional_project_files.txt
-android/app/.cxx/Debug/33586y42/x86_64/android_gradle_build_mini.json
-android/app/.cxx/Debug/33586y42/x86_64/android_gradle_build.json
-android/app/.cxx/Debug/33586y42/x86_64/build_file_index.txt
-android/app/.cxx/Debug/33586y42/x86_64/build.ninja
-android/app/.cxx/Debug/33586y42/x86_64/cmake_install.cmake
-android/app/.cxx/Debug/33586y42/x86_64/CMakeCache.txt
-android/app/.cxx/Debug/33586y42/x86_64/configure_fingerprint.bin
-android/app/.cxx/Debug/33586y42/x86_64/metadata_generation_command.txt
-android/app/.cxx/Debug/33586y42/x86_64/prefab_config.json
-android/app/.cxx/Debug/33586y42/x86_64/symbol_folder_index.txt
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/query/client-agp/cache-v2
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/query/client-agp/cmakeFiles-v1
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/query/client-agp/codemodel-v2
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/reply/cache-v2-1a478a573929dce8a598.json
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/reply/cmakeFiles-v1-c77ee0ea81a64584da0c.json
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/reply/codemodel-v2-1b3359e35366937ec509.json
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
-android/app/.cxx/Debug/33586y42/x86_64/.cmake/api/v1/reply/index-2025-04-13T19-48-58-0494.json
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/cmake.check_cache
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/rules.ninja
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/TargetDirectories.txt
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CMakeCCompiler.cmake
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CMakeCXXCompiler.cmake
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_C.bin
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CMakeDetermineCompilerABI_CXX.bin
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CMakeSystem.cmake
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.c
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CompilerIdC/CMakeCCompilerId.o
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.cpp
-android/app/.cxx/Debug/33586y42/x86_64/CMakeFiles/3.22.1-g37088a8/CompilerIdCXX/CMakeCXXCompilerId.o
+android/app/.cxx/
