--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=zarply_zarply-mobile-wallet
-sonar.organization=zarply
+sonar.projectKey=zarply-mobile-wallet
+sonar.organization=cyber-mint
 sonar.sources=/lib
 
 # This is the name and version displayed in the SonarCloud UI.
