--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^6.1.2
   qr: ^3.0.1
   share_plus: ^10.1.3
+  shared_preferences: ^2.5.3
   solana: ^0.31.2
   url_launcher: ^6.2.4
 
