--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ ios/fastlane/report.xml
 ios/fastlane/README.md
 android/app/.cxx/
 macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Flutter/GeneratedPluginRegistrant.swift
