--- a/.gitea/workflows/android_build.yml
+++ b/.gitea/workflows/android_build.yml
@@ -10,7 +10,7 @@ jobs:
   build-sign-upload:
     runs-on: workstation.ubuntu.lts
     container:
-      image: ghcr.io/cirruslabs/flutter:3.29.3
+      image: gitea.cyber-mint.com/zarply/za-flutter:3.29.3
 
     env:
       BASE64_KEYSTORE: ${{ secrets.BASE64_KEYSTORE }}
