--- a/.gitea/workflows/config.yml
+++ b/.gitea/workflows/config.yml
@@ -23,7 +23,7 @@ jobs:
     name: Build and analyze
     runs-on: workstation.ubuntu.lts
     container:
-      image: ghcr.io/cirruslabs/flutter:3.29.3
+      image: gitea.cyber-mint.com/zarply/za-flutter:3.29.3
     steps:
       - uses: actions/checkout@v2
         with:
