--- a/.gitea/workflows/tagged_builds.yml
+++ b/.gitea/workflows/tagged_builds.yml
@@ -9,7 +9,7 @@ android_build:
     name: Android APK/Appbundle Build & Upload
     runs-on: workstation.ubuntu.lts
     container:
-      image: ghcr.io/cirruslabs/flutter:3.29.3
+      image: gitea.cyber-mint.com/zarply/za-flutter:3.29.3
     env:
       RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
       RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
