--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,12 @@ analyzer:
   exclude:
     - lib/**.freezed.dart
     - lib/**.g.dart
+    - lib/**.config.dart
     - integration_test/**.g.dart
+
+formatter:
+  page_width: 120
+  trailing_commas: preserve
 
 linter:
   rules:
@@ -15,6 +20,7 @@ linter:
     - missing_code_block_language_in_doc_comment
     - prefer_void_to_null
     - unnecessary_statements
+    - always_declare_return_types
     - always_put_required_named_parameters_first
     - always_specify_types
     - avoid_bool_literals_in_conditional_expressions
@@ -54,3 +60,6 @@ linter:
     - use_string_buffers
     - use_to_and_as_if_applicable
     - sort_pub_dependencies
+    - prefer_const_constructors
+    - prefer_const_literals_to_create_immutables
+    - prefer_const_declarations
