feat(flutter_launcher_icons.yaml): set android property to true

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,8 +1,7 @@
 flutter_launcher_icons:
-  android: "launcher_icon"
+  image_path: 'images/icon.png'
+  image_path_ios: 'images/icon.png'
+  android: true
   ios: true
-  image_path: "images/icon.png"
-  min_sdk_android: 21
+  min_sdk_android: 21 # android min sdk min:16, default 21
   remove_alpha_ios: true
-
-
