--- a/.gitea/workflows/build_debug.yaml
+++ b/.gitea/workflows/build_debug.yaml
@@ -66,7 +66,7 @@ jobs:
           BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
           ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
           mkdir artifacts
-          mv build/app/outputs/flutter-apk/app-arm64-v8a-$ENV-release.apk artifacts/zarply-arm64-v8a.apk
+          mv build/app/outputs/flutter-apk/app-arm64-v8a-debug.apk artifacts/zarply-arm64-v8a.apk
       - name: Build Android App Bundle
         run: |
           TAG=$(git describe --tags --always)
@@ -88,7 +88,7 @@ jobs:
           BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
           BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
           ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
-          mv build/app/outputs/bundle/release/app-release.aab artifacts/zarply.aab
+          mv build/app/outputs/bundle/debug/app-debug.aab artifacts/zarply.aab
           mv build/app/outputs/mapping/release/mapping.txt artifacts/appbundle_mapping.txt
           cd build/app/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib/
           zip -r ../../../../../../../../artifacts/appbundle_symbols.zip .
