--- a/.gitea/workflows/playstore-publish.yaml
+++ b/.gitea/workflows/playstore-publish.yaml
@@ -39,10 +39,22 @@ jobs:
         run: |
           TAG=$(git describe --tags --always)
           TAG_NO_V=$(echo "$TAG" | sed 's/^v//')
-          VERSION=$(echo "$TAG_NO_V" | cut -d '+' -f1)
-          BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
-          BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
-          ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
+          
+          if echo "$TAG_NO_V" | grep -q '+'; then
+            VERSION=$(echo "$TAG_NO_V" | cut -d '+' -f1)
+            BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
+            BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
+            ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
+          else
+            VERSION="1.0.0"
+            BUILD=$(git rev-list --count HEAD)
+            ENV=""
+          fi
+          
+          if ! [[ "$BUILD" =~ ^[0-9]+$ ]]; then
+            BUILD=$(git rev-list --count HEAD)
+          fi
+          
           flutter build appbundle --release \
             --obfuscate \
             --split-debug-info=split_debug_info/ \
